--- a/Css/style.css
+++ b/Css/style.css
@@ -298,7 +298,7 @@ margin-left: -5rem;
 
 .row-2:hover:hover{
 	padding: 50px;
-	background-image: url(../assets/clocky.jpg);
+	background-image: url(../images);
 	background-size: cover;
 	background-position: center center;
 	background-attachment: local;
