--- a/Css/style.css
+++ b/Css/style.css
@@ -298,7 +298,7 @@ margin-left: -5rem;
 
 .row-2:hover:hover{
 	padding: 50px;
-	background-image: url(../images);
+	background-image: url(../images/clocky.jpg);
 	background-size: cover;
 	background-position: center center;
 	background-attachment: local;
@@ -308,7 +308,7 @@ margin-left: -5rem;
 
 .row-3:hover{
 	padding: 50px;
-	background-image: url(../assets/calculators.png);
+	background-image: url(../);
 	background-size: cover;
 	background-position: center center;
 	background-attachment: local;
