--- a/Css/style.css
+++ b/Css/style.css
@@ -308,7 +308,7 @@ margin-left: -5rem;
 
 .row-3:hover{
 	padding: 50px;
-	background-image: url(../);
+	background-image: url(../images/calculators.png);
 	background-size: cover;
 	background-position: center center;
 	background-attachment: local;
