styling the beauty poster

--- a/Css/style.css
+++ b/Css/style.css
@@ -318,7 +318,7 @@ margin-left: -5rem;
 
 .row-4:hover{
 	padding: 50px;
-	background-image: url(../assets/beauty-web.webp);
+	background-image: url(../images/beauty-web.webp);
 	background-size: cover;
 	background-position: center center;
 	background-attachment: local;
