--- a/Css/style.css
+++ b/Css/style.css
@@ -255,6 +255,46 @@ margin-left: -5rem;
 	color: var(--main-color);
 }
 
+.box4{
+	padding: 103px;
+	background: #12141c;
+	border-top: 5px solid transparent;
+	border-radius: 0.5rem;
+	transition: all .40s ease;
+	cursor: pointer;
+
+	
+}
+.box4 img{
+	width: 23rem;
+	animation: bounce 1.5s infinite;
+	transition: 1s;
+	transform-style: preserve-3d;
+	margin-left: -5rem;	
+	text-align: center;	
+	}
+
+
+.box h4{
+font-size: 24px;
+font-weight: 600;
+margin: 15px 0;
+transition: all .40s ease;
+}
+.box p{
+color: var(--second-color);
+font-size: var(--p-font);
+line-height: 30px;
+}
+.box:hover{
+transform: scale(1.01) translateY(-5px);
+border-top: 5px solid var(--main-color);
+}
+.box:hover h4{
+color: var(--main-color);
+}
+
+
 .portfolio-content{
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(350px, auto));
